[project]
name = "Easy-AI"
description = "About Ai Chat API"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["openai>=1.0.0"]

[project.urls]
Repository = "https://github.com/mbaisha/ComfyUI-EasyAI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-EasyAI"
Icon = ""
